# python-canviewer

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/canviewer/: __init__.py  _console.py  _entrypoints.py  _jsonify.py  _monitor.py  _player.py  _utils.py
src/canviewer/script/: __init__.py  _codegen.py  _core.py  hatch.py
src/canviewer/tui/: __main__.py  _entrypoint.py  _interface.py  _slider.py  canviewer.tcss
tests/: test_utils.py
